--- a/index.html
+++ b/index.html
@@ -24,11 +24,9 @@
             <h2>sobre mim</h2>
             <div class="sobre mim">
 
-                <p>Desde os verdes anos, minha vida foi marcada pela disciplina e intensidade dos gramados, onde a arte
-                    do jogo moldou minha persistência e espírito competitivo. Aos 17, uma lesão implacável no joelho
-                    ceifou precocemente essa trajetória, arrancando-me das disputas físicas, mas não da batalha por
-                    superação.
-
+                <p> Minha vida sempre  foi marcada pela disciplina e resiliência, quando pequeno corria em gramados no futebol
+                    mas quem diria o destino que uma lesão me tirasse dos gramados.
+                    
                     Hoje, entre ferramentas e motores, encontro na oficina mecânica um ofício que exige precisão e
                     resiliência — qualidades que, aliás, transcendem para minha nova paixão: o universo da programação.
                     Decidi migrar das engrenagens de aço para as linhas de código, e atualmente dedico-me com fervor aos
@@ -39,7 +37,7 @@
                     desafio, e cada linha escrita, um passo para reconquistar — agora em terrenos digitais — a
                     excelência que um dia busquei nos campos.
 
-                    O jogo mudou, mas a essência permanece: stratégia, foco e evolução contínua.
+                    O jogo mudou, mas a essência permanece: stratégia, foco e evolução continua .
 
                 </p>
 
