--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
               <a href="https://github.com/Gleison888"> 
                        Github
                </a>
-               <a heref="https://www.linkedin.com/in/gleisonsantoss/">
+               <a heref="https://www.linkedin.com/in/gleisonsantoss/"> 
                          linkedin
                          </a>
-               <a href=" Gleisonsantos818@gmail.com" >
-                </a>        
+              <p> <a href="mailto:gleisonsantos818@gmail.com" > gleisonsantos818@gmail.com </a> </p>
+            
 
 
 
