--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
     </header>
 
     <nav>
-        <button class="button"><a class="menu-href" href="#meus-projetos" title="Meus projetos">Meus Projetos</a></button>
-        <button class="button"><a class="menu-href" href="#experiencias" title="Experiências">Experiências</a></button>
-        <button class="button"><a class="menu-href" href="#expectativas">Expectativas</a></button>
-        <button class="button"><a class="menu-href" href="#contatos">Contatos</a></button>
-    </nav>
+                <ul>
+                    <li><a href="#projects">Projetos</a></li>
+                    <li><a href="#about">Sobre</a></li>
+                    <li><a href="#contact">Contato</a></li>
+                </ul>
+            </nav>
+       
 
     <main>
         <section id="sobre-mim">
