--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
     </header>
 
     <nav>
-        <button class="button"><a class="menu-href" href="#meus-projetos" title="Meus projetos">Meus Projetos</a></button>
-        <button class="button"><a class="menu-href" href="#experiencias" title="Experiências">Experiências</a></button>
-        <button class="button"><a class="menu-href" href="#expectativas">Expectativas</a></button>
-        <button class="button"><a class="menu-href" href="#contatos">Contatos</a></button>
-    </nav>
+                <ul>
+                    <li><a href="#projects">Projetos</a></li>
+                    <li><a href="#about">Sobre</a></li>
+                    <li><a href="#contact">Contato</a></li>
+                </ul>
+            </nav>
 
     <main>
         <section id="sobre-mim">
@@ -33,14 +34,14 @@
             </p>
         </section>
 
-        <section id="meus-projetos">
+        <section id="Meus-projetos">
             <h2>Meus Projetos</h2>
             <p>
                 Meu último projeto foi um clone da Netflix. Utilizei HTML, Java e CSS com o objetivo de praticar estruturação e reforçar conhecimentos nessas linguagens.
             </p>
         </section>
 
-        <section id="experiencias">
+        <section id="Experiencias">
             <h2>Experiências</h2>
             <p>
                 Auxiliar de panificação em uma padaria de grande porte na Brasilândia (ZN), onde atuei como auxiliar de padeiro, confeiteiro e pizzaiolo (2020 a 2021).<br>
@@ -48,14 +49,14 @@
             </p>
         </section>
 
-        <section id="expectativas">
+        <section id="Expectativas">
             <h2>Expectativas</h2>
             <p>
                 Estou estudando programação pela EDUCAFRO. Tenho aprendido linguagens como HTML, Python, Java e JavaScript. Quero me tornar um Desenvolvedor Fullstack, começando pelo Front-End.
             </p>
         </section>
 
-        <section id="contatos">
+        <section id="Contatos">
             <h2>Contatos</h2>
             <ul>
                 <li><a href="https://www.instagram.com/gesantos001/">Instagram</a></li>
