--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header class="bayner">
-        <img src="./imagem/logo.jpg" alt="Gleison programador" class="gleison programador">
+        <img src="./imagem/logo.jpg" alt="gleison programando 2." cass="gleison programando 2">
         <h1>Olá, eu sou Gleison Santos</h1>
         <p>Desenvolvedor Front-End | UX/UI Designer e futuro Fullstack</p>
     </header>
