--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header class="bayner">
-        <img src="./imagem/logo.jpg" alt="gleison programando 2.jpeg" cass="gleison programando 2.jpeg">
+        <img src="./imagem/logo.jpg" alt="programador " cass="programador ">
         <h1>Olá, eu sou Gleison Santos</h1>
         <p>Desenvolvedor Front-End | UX/UI Designer e futuro Fullstack</p>
     </header>
