--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header class="bayner">
-        <img src="./imagem/logo.jpg" alt="logo.jpg" cass="logo.jpg ">
+        <img src="gleison programando 2.jpeg" alt="gleison">
         <h1>Olá, eu sou Gleison Santos</h1>
         <p>Desenvolvedor Front-End | UX/UI Designer e futuro Fullstack</p>
     </header>
