--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header class="bayner">
-        <img src="gleison.jpeg" alt="gleison">
+        <img src="gleison.jpeg" alt="Gleison">
         <h1>Olá, eu sou Gleison Santos</h1>
         <p>Desenvolvedor Front-End | UX/UI Designer e futuro Fullstack</p>
     </header>
