--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
 
     <header class="bayner">
-        <img src="gleison.jpeg" alt="Gleison">
-        <h1>Olá, eu sou Gleison Santos</h1>
-        <p>Desenvolvedor Front-End | UX/UI Designer e futuro Fullstack</p>
-    </header>
+    <img src="gleison.jpeg" alt="Gleison" class="profile-image">
+    <h1>Olá, eu sou Gleison Santos</h1>
+    <p>Desenvolvedor Front-End | UX/UI Designer e futuro Fullstack</p>
+</header>
 
     <nav>
         <button class="button"><a class="menu-href" href="#meus-projetos" title="Meus projetos">Meus Projetos</a></button>
